[MODIFY] fix z-index

--- a/public/common/css/style.css
+++ b/public/common/css/style.css
@@ -1176,8 +1176,10 @@ margin-right: 8px;
 	display: none;
 }
 
+/*back to top*/
 .cd-top {
   display: inline-block;
+  z-index: 6;
   height: 40px;
   width: 40px;
   position: fixed;
@@ -1228,6 +1230,7 @@ margin-right: 8px;
   }
 }
 
+/*histats counter*/
 #histats_counter {
   position: absolute;
   /*bottom: 40px;*/
